--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,158 @@
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 300;
+  src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2'); 
+}
+
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'); 
+}
+
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-weight: 600;
+  src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2'); 
+}
+
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-weight: 900;
+  src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2'); 
+}
+
 :root {
-	--color-brand-light: #819B57;
-	--color-brand-dark: #465929;
-	--color-primary-light: #FAF4EA;
-	--color-primary-dark: #31261A;
+  --color-brand-light: #819b57;
+  --color-brand-dark: #465929;
+  --color-primary-light: #faf4ea;
+  --color-primary-dark: #31261a;
 }
 
 /*Base*/
 body {
-	color: var(--color-primary-dark);
+  color: var(--color-primary-dark);
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
 }
-ul {
-	list-style-type: none;
 
+ul {
+  list-style-type: none;
+}
+
+address {
+  font-style: normal;
 }
 
 /*Button*/
 .button {
-	background-color: var(--color-brand-light);
-	border: 2px solid var(--color-brand-light);
-	border-radius: 8px;
-	color: var(--color-primary-light);
-	cursor: pointer;
+  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-light);
+  border-radius: 8px;
+  color: var(--color-primary-light);
+  cursor: pointer;
+  font-weight: 600;
 }
 
 .button:hover {
-	background-color: transparent;
-	color: var(--color-brand-dark);
+  background-color: transparent;
+  color: var(--color-brand-dark);
 }
 
 /*Link*/
-.link a{
-	color: var(--color-primary-light);
+.link {
+  color: var(--color-primary-light);
+  text-decoration: none;
 }
 
 .link:hover {
-	color: var(--color-brand-light);
+  color: var(--color-brand-light);
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 /*Hero section*/
 .hero-title {
-	color: var(--color-primary-light);
+  color: var(--color-primary-light);
+  text-align: center;
+  font-weight: 900;
+  font-size: 128px;
 }
 
 .hero-title .accent {
-	color: var(--color-brand-light);
+  color: var(--color-brand-light);
+}
+
+p .accent {
+  color: var(--color-brand-light);
 }
 
 /*Advantages section*/
 .advantages-list {
-	background-color:	var(--color-brand-light);
-	color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+  color: var(--color-primary-light);
+}
+
+.advantages_item {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.3;
+}
+
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
 }
 
 .section-title .accent {
-	color: var(--color-brand-dark);
+  color: var(--color-brand-dark);
 }
 
+/*Traditions section*/
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+/*Chefs section*/
+.chef-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/*Formats section*/
+.format-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/*Fpooter*/
+.address-link {
+  color: var(--color-primary-light);
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.address-link:hover {
+  color: var(--color-primary-dark);
+}
+
+.address-copyright {
+font-size: 14px;
+}
