--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 @font-face {
   font-display: swap;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-weight: 300;
-  src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2'); 
+  src: url("../fonts/poppins-v20-latin-300.woff2") format("woff2");
 }
 
 @font-face {
-  font-display: swap; 
-  font-family: 'Poppins';
+  font-display: swap;
+  font-family: "Poppins";
   font-weight: 400;
-  src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'); 
+  src: url("../fonts/poppins-v20-latin-regular.woff2") format("woff2");
 }
 
 @font-face {
-  font-display: swap; 
-  font-family: 'Poppins';
+  font-display: swap;
+  font-family: "Poppins";
   font-weight: 600;
-  src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2'); 
+  src: url("../fonts/poppins-v20-latin-600.woff2") format("woff2");
 }
 
 @font-face {
-  font-display: swap; 
-  font-family: 'Poppins';
+  font-display: swap;
+  font-family: "Poppins";
   font-weight: 900;
-  src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2'); 
+  src: url("../fonts/poppins-v20-latin-900.woff2") format("woff2");
 }
 
 :root {
@@ -34,15 +34,22 @@
 }
 
 /*Base*/
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--color-primary-dark);
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -50,8 +57,37 @@ address {
   font-style: normal;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
 /*Button*/
 .button {
+  padding: 16px 32px;
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
   border-radius: 8px;
@@ -74,15 +110,40 @@ address {
 .link:hover {
   color: var(--color-brand-light);
   text-decoration: underline;
-  font-weight: 600;
+}
+
+/*Header*/
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 /*Hero section*/
+.hero-section {
+  padding: 272px 0;
+}
+
 .hero-title {
   color: var(--color-primary-light);
   text-align: center;
   font-weight: 900;
   font-size: 128px;
+  margin-bottom: 0;
 }
 
 .hero-title .accent {
@@ -94,12 +155,19 @@ p .accent {
 }
 
 /*Advantages section*/
-.advantages-list {
+.advantages-section {
   background-color: var(--color-brand-light);
-  color: var(--color-primary-light);
+  padding: 16px 0;
 }
 
-.advantages_item {
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.advantages-item {
+  color: var(--color-primary-light);
   font-size: 20px;
   font-weight: 300;
   line-height: 1.3;
@@ -115,22 +183,58 @@ p .accent {
 }
 
 /*Traditions section*/
+.traditions-section {
+  padding-top: 96px;
+}
+
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+.traditions-title {
+  margin-bottom: 42px;
+}
+
 .traditions-text .brand {
   color: var(--color-brand-light);
   font-weight: 600;
 }
 
-.uppercase {
+.traditions-text.limited {
+  max-width: 330px;
+}
+
+.traditions-text .uppercase {
   text-transform: uppercase;
 }
 
 /*Chefs section*/
+.chefs-title {
+  margin-bottom: 80px;
+}
+
 .chef-title {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
 
 /*Formats section*/
+.format-card {
+  padding: 24px;
+  border: 1px solid lightgray; /*remove*/
+  background-repeat: 16px;
+}
+
+.formats-title {
+  margin-bottom: 80px;
+}
+
 .format-title {
   font-size: 24px;
   font-weight: 600;
@@ -141,7 +245,22 @@ p .accent {
   font-weight: 300;
 }
 
-/*Fpooter*/
+.formats-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.formats-item {
+  flex-basis: calc((100% - 40px) / 3);
+}
+
+/*Contact section*/
+.contact-title {
+  margin-bottom: 16px;
+}
+
+/*Footer*/
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
@@ -154,5 +273,5 @@ p .accent {
 }
 
 .address-copyright {
-font-size: 14px;
+  font-size: 14px;
 }
