--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,13 @@
 }
 
 :root {
-  --color-brand-light: #819b57;
+  --color-brand: #819b57;
+  --color-brand-light: #CFCFBC;
   --color-brand-dark: #465929;
+  --color-secondary-dark: #A18268;
   --color-primary-light: #faf4ea;
   --color-primary-dark: #31261a;
+  --color-background: #FAF4EA;
 }
 
 /*Base*/
@@ -40,6 +43,7 @@
 
 body {
   color: var(--color-primary-dark);
+  background-color: var(--color-background);
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -88,8 +92,8 @@ h6 {
 /*Button*/
 .button {
   padding: 16px 32px;
-  background-color: var(--color-brand-light);
-  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand);
+  border: 2px solid var(--color-brand);
   border-radius: 8px;
   color: var(--color-primary-light);
   cursor: pointer;
@@ -108,7 +112,7 @@ h6 {
 }
 
 .link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand);
   text-decoration: underline;
 }
 
@@ -136,6 +140,10 @@ h6 {
 /*Hero section*/
 .hero-section {
   padding: 272px 0;
+  background-image: url('../img/couple-in-bakery.jpg');
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 .hero-title {
@@ -147,16 +155,16 @@ h6 {
 }
 
 .hero-title .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand);
 }
 
 p .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand);
 }
 
 /*Advantages section*/
 .advantages-section {
-  background-color: var(--color-brand-light);
+  background-color: var(--color-brand);
   padding: 16px 0;
 }
 
@@ -177,7 +185,9 @@ p .accent {
   font-size: 64px;
   font-weight: 900;
 }
-
+.section-title.centered {
+  text-align: center;
+}
 .section-title .accent {
   color: var(--color-brand-dark);
 }
@@ -201,7 +211,7 @@ p .accent {
 }
 
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand);
   font-weight: 600;
 }
 
@@ -215,7 +225,17 @@ p .accent {
 
 /*Chefs section*/
 .chefs-title {
-  margin-bottom: 80px;
+  max-width: 520px;
+  margin: 0 auto 80px;
+}
+
+.chefs-title::after,
+.chefs-title::before {
+  display: block;
+  width: 352px;
+  height: 2px;
+  background-color: var(--color-brand-light);
+  content: '';
 }
 
 .chef-title {
@@ -224,11 +244,20 @@ p .accent {
   font-weight: 600;
 }
 
+.chef-photo {
+border-radius:  4px 4px 4px 200px;
+box-shadow: -16px 16px 0 0 var(--color-background), -16px 16px 0 2px var(--color-secondary-dark);
+}
+
 /*Formats section*/
 .format-card {
+  height: 444px;
   padding: 24px;
   border: 1px solid lightgray; /*remove*/
-  background-repeat: 16px;
+  background-color: linear-gradient(180deg, 
+  rgba(49, 38, 26, 0) 55.21%,
+  rgba(49, 38, 26, 0.71) 72.92%,
+  var(--color-primary-dark) 100%);
 }
 
 .formats-title {
@@ -274,4 +303,11 @@ p .accent {
 
 .address-copyright {
   font-size: 14px;
+}
+.footer {
+  background-color: var(--color-primary-dark);
+  background-image: url(../img/footer-background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
