--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,18 @@
 
 :root {
   --color-brand: #819b57;
-  --color-brand-light: #CFCFBC;
+  --color-brand-light: #cfcfbc;
   --color-brand-dark: #465929;
-  --color-secondary-dark: #A18268;
+  --color-secondary-dark: #a18268;
   --color-primary-light: #faf4ea;
   --color-primary-dark: #31261a;
-  --color-background: #FAF4EA;
+  --color-background: #faf4ea;
 }
 
 /*Base*/
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -55,6 +57,10 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+a {
+  display: inline-block;
 }
 
 address {
@@ -140,7 +146,7 @@ h6 {
 /*Hero section*/
 .hero-section {
   padding: 272px 0;
-  background-image: url('../img/couple-in-bakery.jpg');
+  background-image: url("../img/couple-in-bakery.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -235,7 +241,7 @@ p .accent {
   width: 352px;
   height: 2px;
   background-color: var(--color-brand-light);
-  content: '';
+  content: "";
 }
 
 .chef-title {
@@ -245,19 +251,49 @@ p .accent {
 }
 
 .chef-photo {
-border-radius:  4px 4px 4px 200px;
-box-shadow: -16px 16px 0 0 var(--color-background), -16px 16px 0 2px var(--color-secondary-dark);
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-background),
+    -16px 16px 0 2px var(--color-secondary-dark);
 }
 
+.chefs-list {
+  display: flex;
+  gap: 40px 30px;
+  flex-wrap: wrap;
+}
+
+.chefs-item {
+flex-basis: calc(100% - 30px/2);
+}
+
+.chef-card {
+  display: flex;
+  gap: 30px;
+}
+
+.chef-text p {
+margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+  margin-bottom: 0;
+}
 /*Formats section*/
+.formats-container {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
 .format-card {
   height: 444px;
   padding: 24px;
   border: 1px solid lightgray; /*remove*/
-  background-color: linear-gradient(180deg, 
-  rgba(49, 38, 26, 0) 55.21%,
-  rgba(49, 38, 26, 0.71) 72.92%,
-  var(--color-primary-dark) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0.00) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%);
 }
 
 .formats-title {
@@ -283,13 +319,71 @@ box-shadow: -16px 16px 0 0 var(--color-background), -16px 16px 0 2px var(--color
 .formats-item {
   flex-basis: calc((100% - 40px) / 3);
 }
+/*Carousel*/
+button.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+button.carousel-button:hover {
+  background-color: var(--color-primary-dark);
+}
 
 /*Contact section*/
+.contact-section {
+padding-bottom: 96px;
+}
+
+.contact-container {
+display: flex;
+gap: 32px;
+}
+
+.contact-map {
+  flex-shrink: 0;
+ border-radius: 16px;
+  border: none;
+}
+
 .contact-title {
   margin-bottom: 16px;
 }
 
 /*Footer*/
+.footer {
+  padding: 32px 0;
+}
+
+.footer-container {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-nav,
+.footer-address {
+  display: flex;
+  flex-basis: 50%;
+  gap: 20px;
+}
+
+.footer-menu,
+.footer-logo {
+  flex-grow: 1;
+}
+.address-info,
+.address-list {
+  flex-grow: 1;
+}
+
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
@@ -304,6 +398,15 @@ box-shadow: -16px 16px 0 0 var(--color-background), -16px 16px 0 2px var(--color
 .address-copyright {
   font-size: 14px;
 }
+
+.address-icon {
+  fill: var(--color-primary-light);
+}
+
+.address-icon:hover {
+  fill: var(--color-brand);
+}
+
 .footer {
   background-color: var(--color-primary-dark);
   background-image: url(../img/footer-background.png);
