--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ h6 {
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
+  transition: color 0.3s;
 }
 
 .link:hover {
@@ -123,6 +124,14 @@ h6 {
 }
 
 /*Header*/
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -146,7 +155,12 @@ h6 {
 /*Hero section*/
 .hero-section {
   padding: 272px 0;
-  background-image: url("../img/couple-in-bakery.jpg");
+  background-image: linear-gradient(
+      rgba(18, 18, 17, 0.78),
+      rgba(18, 18, 17, 0.6),
+      rgba(18, 18, 17, 0)
+    ),
+    url("../img/couple-in-bakery.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -273,7 +287,7 @@ p .accent {
 }
 
 .chefs-item {
-  flex-basis: calc(100% - 30px / 2);
+  flex-basis: calc((100% - 30px) / 2);
 }
 
 .chef-card {
@@ -298,13 +312,19 @@ p .accent {
 .format-card {
   height: 444px;
   padding: 24px;
-  border: 1px solid lightgray; /*remove*/
+  border: 1px solid var(--color-brand-light); /*remove*/
   background: linear-gradient(
     180deg,
     rgba(49, 38, 26, 0) 55.21%,
     rgba(49, 38, 26, 0.71) 72.92%,
     var(--color-primary-dark) 100%
   );
+  transition: transform 0.3s;
+  border-radius: 16px;
+}
+
+.format-card:hover {
+  transform: scale(1.05);
 }
 
 .formats-title {
@@ -366,6 +386,7 @@ button.carousel-button:hover {
 }
 
 .contact-title {
+  font-size: 60px;
   margin-bottom: 16px;
 }
 
@@ -456,7 +477,9 @@ button.carousel-button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 0;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .backdrop.is-hidden {
@@ -467,13 +490,71 @@ button.carousel-button:hover {
 
 .modal {
   position: relative;
-  width: 880px;
-  height: 880px;
+  padding: 128px;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
   background-color: var(--color-primary-light);
   border-radius: 32px;
+  overflow-y: auto;
 }
 .modal-btn-close {
   position: absolute;
   top: 40px;
   right: 40px;
+}
+
+/*Form*/
+.form-field {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.form-input {
+  padding: 16px 42px;
+  width: 100%;
+  border: 1px solid var(--color-secondary-dark);
+  border-radius: 8px;
+  background-color: transparent;
+  font-size: 16px;
+}
+
+.form-input:focus {
+  border-color: var(--color-brand);
+  outline: none;
+}
+
+.form-input::placeholder {
+color: var(--color-secondary-dark);
+font-size: 16px;
+line-height: 1.17;
+}
+
+.form-input:focus::placeholder {
+  color: var(--color-primary-dark);
+}
+
+.form-label {
+position: absolute;
+left: 42px;
+top: 16px;
+}
+
+.form-button {
+  display: block;
+  margin: 0 auto 24px;
+}
+
+.form-terms {
+  max-width: 220px;
+  margin: 0 auto;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.form-terms-link {
+color: var(--color-primary-dark);
+text-underline-offset: 2px;
 }
