--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,7 +6,7 @@
  
 body {
 	color: var(--color-primary-dark);
-	background-color: var(--color-background);
+	background-color: var(--color-primary-light);
 	font-family: "Poppins", sans-serif;
 	font-size: 18px;
 	font-weight: 400;
