--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -1,19 +1,30 @@
 .contact-section {
 	padding-bottom: 96px;
+
+	&__container {
+		display: flex;
+		gap: 32px;
+	 }
+
+	&__title {
+		font-size: 60px;
+		margin-bottom: 16px;
+	 }
+	 
+	&__form-field {
+		margin-bottom: 24px;
+	 }
+
+	&__map {
+		flex-shrink: 0;
+		border-radius: 16px;
+		border: none;
+	 }
+	 
+	 &__button {
+		display: block;
+		margin: 0 auto 24px;
+	 }
  }
  
- .contact-container {
-	display: flex;
-	gap: 32px;
- }
  
- .contact-map {
-	flex-shrink: 0;
-	border-radius: 16px;
-	border: none;
- }
- 
- .contact-title {
-	font-size: 60px;
-	margin-bottom: 16px;
- }
