--- a/scss/components/_formats.scss
+++ b/scss/components/_formats.scss
@@ -1,13 +1,33 @@
-.formats-container {
-	display: flex;
-	gap: 32px;
-	align-items: center;
- }
+.formats-section {
+	&__slider {
+		display: flex;
+		gap: 32px;
+		align-items: center;
+	 }
+
+	 &__title {
+		margin-bottom: 80px;
+	 }
+
+	 &__item {
+		flex-basis: calc((100% - 40px) / 3);
+	 }
+
+	 &__list {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+	 }
+}
+
  
  .format-card {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 	height: 444px;
 	padding: 24px;
-	border: 1px solid var(--color-brand-light); /*remove*/
 	background: linear-gradient(
 	  180deg,
 	  rgba(49, 38, 26, 0) 55.21%,
@@ -16,32 +36,32 @@
 	);
 	transition: transform 0.3s;
 	border-radius: 16px;
+	color: var(--color-primary-light);
+
+	 &:hover {
+		transform: scale(1.05);
+	 }
+	 
+	 &__title {
+		font-size: 24px;
+		font-weight: 600;
+	 }
+	 
+	&__text {
+		font-size: 14px;
+		font-weight: 300;
+	 }
+	 
+	&__image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+	 }
  }
+
  
- .format-card:hover {
-	transform: scale(1.05);
- }
  
- .formats-title {
-	margin-bottom: 80px;
- }
  
- .format-title {
-	font-size: 24px;
-	font-weight: 600;
- }
- 
- .format-text {
-	font-size: 14px;
-	font-weight: 300;
- }
- 
- .formats-list {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 20px;
- }
- 
- .formats-item {
-	flex-basis: calc((100% - 40px) / 3);
- }
