--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import '../scss/_base.scss';
 
 @import '../scss/utilits/_utilits.scss';
+@import '../scss/utilits/_text.scss';
+@import '../scss/utilits/_section.scss';
 
 @import '../scss/components/_button.scss';
 @import '../scss/components/_hero.scss';
@@ -18,8 +20,8 @@
 @import '../scss/components/_modal.scss';
 @import '../scss/components/_form.scss';
 @import '../scss/components/_link.scss';
-
- 
+@import '../scss/components/_chefs-card.scss';
+@import '../scss/components/_form-terms.scss'
 
 
  
