--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -15,6 +15,7 @@
 			background-color: transparent;
 			font-size: 16px;
 			line-height: 1.17;
+			margin-bottom: 32px;
 
 			 &:focus {
 				border-color: var(--color-brand);
