--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,22 +1,23 @@
 .backdrop {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	background-color: rgba(0, 0, 0, 0.5);
 	padding: 20px 0;
 	transition: opacity 0.3s, visibility 0.3s;
+
+	&.is-hidden {
+		opacity: 0;
+		visibility: hidden;
+		pointer-events: none;
+	 }
  }
  
- .backdrop.is-hidden {
-	opacity: 0;
-	visibility: hidden;
-	pointer-events: none;
- }
  
  .modal {
 	position: relative;
@@ -27,9 +28,19 @@
 	background-color: var(--color-primary-light);
 	border-radius: 32px;
 	overflow-y: auto;
+
+	&____form-field {
+		margin-bottom: 32px;
+	}
+	&__button {
+		margin: 0 auto 24px;
+		display: block;
+	}
  }
- .modal-btn-close {
-	position: absolute;
-	top: 40px;
-	right: 40px;
- }
+
+.modal-btn-close {
+		position: absolute;
+		top: 40px;
+		right: 40px;
+	 }
+ 
