--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import '../scss/utilits/_section.scss';
 
 @import '../scss/components/_button.scss';
+@import '../scss/components/_mobile-menu.scss';
 @import '../scss/components/_hero.scss';
 @import '../scss/components/_header.scss';
 @import '../scss/components/_advantages.scss';
