--- a/scss/components/_traditions.scss
+++ b/scss/components/_traditions.scss
@@ -1,25 +1,38 @@
 .traditions-section {
-	padding-top: 96px;
+  display: block;
+  padding-top: 40px;
 
-	&__container {
-		display: flex;
-		justify-content: space-between;
-		gap: 40px;
-	 }
-	
-	 &__content {
-		max-width: 710px;
-	 }
+  @media screen and (min-width: $bp-tablet) {
+    padding-top: 96px;
+  }
 
-	 &__title {
-		margin-bottom: 42px;
-	 }
+  &__container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 40px;
+  }
 
-	 &__text {
-		&--limited {
-		max-width: 330px;
-	 }}
+  &__content {
+    max-width: 710px;
+  }
 
- }
+  &__title {
+    margin-bottom: 42px;
+  }
 
- 
+  &__text {
+    &--limited {
+      max-width: 330px;
+    }
+  }
+
+  &__image {
+    border-radius: 400px 400px 0px 0px;
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: block;
+    }
+  }
+}
