--- a/scss/utilits/_variables.scss
+++ b/scss/utilits/_variables.scss
@@ -1,8 +1,12 @@
 :root {
 	--color-brand: #819b57;
-	--color-brand-light: #cfcfbc;
+	--color-brand-light: #CFCFBC;
 	--color-brand-dark: #465929;
 	--color-secondary-dark: #a18268;
 	--color-primary-light: #faf4ea;
 	--color-primary-dark: #31261a;
  }
+
+ $bp-mobile: 488px;
+ $bp-tablet: 768px;
+ $bp-desktop: 1280px;
