--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,8 @@
 @import '../scss/components/_form.scss';
 @import '../scss/components/_link.scss';
 @import '../scss/components/_chefs-card.scss';
-@import '../scss/components/_form-terms.scss'
+@import '../scss/components/_form-terms.scss';
+@import '../scss/components/_pagination.scss';
 
 
  
