--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,44 +1,50 @@
 *,
 *::after,
 *::before {
-	box-sizing: border-box;
- }
- 
-body {
-	color: var(--color-primary-dark);
-	background-color: var(--color-primary-light);
-	font-family: "Poppins", sans-serif;
-	font-size: 16px;
-	font-weight: 300;
-	line-height: 1.5;
-	margin: 0;
+  box-sizing: border-box;
+}
 
-	@media screen and (min-width: $bp-tablet) {
-		font-size: 18px;
-		font-weight: 400;
-	}
- }
- 
+body {
+  color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+
+  @media screen and (min-width: $bp-tablet) {
+    font-size: 18px;
+    font-weight: 400;
+  }
+}
+
 ul {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
- }
- 
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 a {
-	display: inline-block;
- }
- 
+  display: inline-block;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 address {
-	font-style: normal;
- }
- 
- h1,
- h2,
- h3,
- h4,
- h5,
- h6 {
-	margin-top: 0;
- }
- 
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+}
