--- a/scss/components/_chefs.scss
+++ b/scss/components/_chefs.scss
@@ -1,7 +1,11 @@
 .chefs-section {
   &__title {
-    margin: 0 auto 80px;
+    margin: 0 auto 24px;
     position: relative;
+
+    @media screen and (min-width: $bp-tablet) {
+      margin-bottom: 80px;
+    }
 
     &::after {
       right: 0;
@@ -13,23 +17,35 @@
 
     &::after,
     &::before {
-      display: block;
+      display: none;
       width: 352px;
       height: 2px;
       background-color: var(--color-brand-light);
       content: "";
       position: absolute;
       bottom: 24px;
+
+      @media screen and (min-width: $bp-desktop) {
+        display: block;
+      }
     }
   }
 
   &__list {
     display: flex;
-    gap: 40px 30px;
+    flex-direction: column;
+    gap: 20px;
     flex-wrap: wrap;
+
+    @media screen and (min-width: $bp-tablet) {
+      gap: 40px 30px;
+      flex-direction: row;
+    }
   }
 
   &__item {
-    flex-basis: calc((100% - 30px) / 2);
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
   }
 }
