--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,48 +1,4 @@
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
-
-.footer-nav,
-.footer-address {
-  display: flex;
-  flex-basis: 50%;
-  gap: 20px;
-}
-
-.footer-menu,
-.footer-logo {
-  flex-grow: 1;
-}
-.address-info,
-.address-list {
-  flex-grow: 1;
-}
-
-.address-link {
-  color: var(--color-primary-light);
-  font-size: 16px;
-  font-weight: 300;
-  text-decoration: none;
-}
-
-.address-link:hover {
-  color: var(--color-primary-dark);
-}
-
-.address-copyright {
-  font-size: 14px;
-}
-
-.address-icon {
-  fill: var(--color-primary-light);
-}
-
-.address-icon:hover {
-  fill: var(--color-brand);
-}
-
-.footer {
+.footer { 
   padding: 32px 0;
   background-color: var(--color-primary-dark);
   background-image: url(../img/footer-background.png);
@@ -50,26 +6,122 @@
   background-size: cover;
   background-position: center;
   position: relative;
-}
 
-.footer::after,
-.footer::before {
-  position: absolute;
-  background-repeat: no-repeat;
-  content: "";
-  bottom: 0;
-}
+  &::after,
+  &::before {
+    position: absolute;
+    background-repeat: no-repeat;
+    content: "";
+    bottom: 0;
+  }
 
-.footer::after {
-  background-image: url(/img/cut-decor-bread-small.png);
-  width: 180px;
-  height: 120px;
-  left: 0;
-}
+  &::before {
+    width: 85px;
+    height: 205px;
+    top: 0;
+    left: 0;
+    background-image: url("");
 
-.footer::before {
-  background-image: url(/img/cut-decor-bread-large.png);
-  width: 380px;
-  height: 190px;
-  right: 0;
+    @media screen and (min-width: $bp-tablet) {
+      right: 0;
+      top: auto;
+      left: auto;
+      width: 380px;
+      height: 190px;
+      background-image: url("/img/cut-decor-bread-large.png");
+    }
+  }
+
+  &::after {
+    background-image: url("");
+    width: 100px;
+    height: 90px;
+    right: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      left: 0;
+      right: auto;
+      width: 180px;
+      height: 120px;
+      background-image: url("/img/cut-decor-bread-small.png");
+    }
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+    }
+  }
+
+  &__nav,
+  &__address {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      flex-basis: 50%;
+      text-align: left;
+    }
+  }
+
+  &__logo {
+    flex-grow: 1;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 16px;
+  }
+
+  &__address-copyright {
+    color: var(--color-secondary-dark);
+    font-size: 14px;
+  }
+
+  &__address-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+  }
+
+  &__address-link:hover {
+    color: var(--color-brand);
+  }
+
+  &__address-info,
+  &__address-list {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 16px;
+  }
+
+  &__socials {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 16px;
+
+    @media screen and (min-width: $bp-tablet) {
+      justify-content: flex-start;
+    }
+  }
+
+  &__socials-icon {
+    fill: var(--color-primary-light);
+  }
+
+  &__socials-icon:hover {
+    fill: var(--color-brand);
+  }
 }
