--- a/scss/components/_formats.scss
+++ b/scss/components/_formats.scss
@@ -5,22 +5,24 @@
     align-items: center;
   }
 
-  &__title {
-    margin-bottom: 80px;
-  }
-
-  &__item {
-    flex-basis: calc((100% - 40px) / 3);
-  }
-
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    margin-bottom: 32px;
+  }
+  &__container {
+    overflow: hidden;
+  }
+
+  &__button {
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
+   }
   }
 }
 
 .format-card {
+  transition: transform 0.3s;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -32,15 +34,11 @@
     rgba(49, 38, 26, 0) 55.21%,
     rgba(49, 38, 26, 0.71) 72.92%,
     var(--color-primary-dark) 100%
-  );
-  transition: transform 0.3s;
+  ); 
   border-radius: 16px;
   color: var(--color-primary-light);
 
-  &:hover {
-    transform: scale(1.05);
-  }
-
+ 
   &__title {
     font-size: 24px;
     font-weight: 600;
