--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -20,13 +20,17 @@
 
 .modal {
   position: relative;
-  padding: 128px;
+  padding: 48px;
   width: 100%;
   max-width: 880px;
   height: 100%;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding: 128px;
+  }
 
   &____form-field {
     margin-bottom: 32px;
